--- a/src/flexcards.html
+++ b/src/flexcards.html
@@ -3,7 +3,7 @@
   <head>
     <title>Flexbox Cards | Sandbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display|Montserrat">
   </head>
   <body class="flexcards_page">
