--- a/src/flexcards.html
+++ b/src/flexcards.html
@@ -8,7 +8,7 @@
   </head>
   <body class="flexcards_page">
     <article>
-      <h1>Flexbox Cards</h1>
+      <h1>Flexbox SWEET</h1>
       <ul class="flexcards">
         <li class="flexcard_item"><a class="flexcard" href="#">
             <div class="flexcard_image"><img src="http://unsplash.it/320/240/?image=32"/></div>
