--- a/src/flexcards.html
+++ b/src/flexcards.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display|Montserrat">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body class="flexcards_page">
     <article>
-      <h1>Flexbox SWEET</h1>
+      <h1>Flexbox Cards</h1>
       <ul class="flexcards">
         <li class="flexcard_item"><a class="flexcard" href="#">
             <div class="flexcard_image"><img src="http://unsplash.it/320/240/?image=32"/></div>
