--- a/src/metro.html
+++ b/src/metro.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="nav has-shadow" id="top">
       <div class="container">
-        <div class="nav-left"><a class="nav-item" href="../index.html"><img src="../img/gulp.png" alt="Description"></a></div><span class="nav-toggle"><span></span><span></span><span></span></span>
+        <div class="nav-left"><a class="nav-item" href="../index.html"><img src="img/gulp.png" alt="Description"></a></div><span class="nav-toggle"><span></span><span></span><span></span></span>
         <div class="nav-right nav-menu"><a class="nav-item is-tab is-active">Home</a><a class="nav-item is-tab">Features</a><a class="nav-item is-tab">Team</a><a class="nav-item is-tab">Help</a><span class="nav-item"><a class="button">Log in</a><a class="button is-info">Sign up</a></span></div>
       </div>
     </nav>
@@ -92,6 +92,6 @@
         </div>
       </div>
     </section>
-    <script type="text/javascript" src="../js/bulma.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
   </body>
 </html>
